# SunLabAccessSystem

sunlab_access_app/: CMakeLists.txt  main.cpp
sunlab_access_app/include/: AccessHistoryPanel.h  Database.h  MainFrame.h  StudentManagementPanel.h
sunlab_access_app/src/: AccessHistoryPanel.cpp  Database.cpp  MainFrame.cpp  StudentManagementPanel.cpp
